--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   smooth_page_indicator: ^1.2.0+3
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
