--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   gap: ^3.0.1
   smooth_page_indicator: ^1.2.0+3
   mobile_scanner: ^6.0.1
+  google_maps_flutter: ^2.9.0
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,7 @@ flutter:
     - assets/images/character/character_0/
     - assets/images/character/character_1/
     - assets/images/character/character_2/
+    - assets/images/character/location/
 
     - assets/images/ending/
 
