--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   mobile_scanner: ^6.0.1
   google_maps_flutter: ^2.9.0
   geolocator: ^13.0.1
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
