--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
   shared_preferences: ^2.3.2
+  share_plus: ^10.1.1
+  url_launcher: ^6.3.1
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
