💄 Image 파일 추가 및 적용

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ flutter:
 
     - assets/images/splash.png
 
+    - assets/images/item.jpg
+    - assets/images/spot0.jpg
+    - assets/images/spot1.jpg
+
     # Icons
     - assets/icons/arrow-right-small-mono.png
     - assets/icons/bags.png
